force-app/main/default/objects/CadenceTemplate__c/fields/ObjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>ObjectRecordType__c</fullName>
    <label>Tipo do Objeto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PFDelta</fullName>
                <label>Delta Parceiros</label>
            </value>
            <value>
                <fullName>PJDelta</fullName>
                <label>Delta Inside Sales</label>
            </value>
            <value>
                <fullName>LeadPF</fullName>
                <label>LUZ PF</label>
            </value>
            <value>
                <fullName>LeadPJ</fullName>
                <label>LUZ PJ</label>
            </value>
            <value>
                <fullName>Prospecção Marketing</fullName>
            </value>
            <value>
                <fullName>Prospecção Própria</fullName>
            </value>
            <value>
                <fullName>Thymos</fullName>
            </value>
            <value>
                <fullName>Pre_lead_LUZ</fullName>
                <label>Pre lead LUZ</label>
            </value>
            <value>
                <fullName>Pre_Lead_DELTA</fullName>
                <label>Pre Lead DELTA</label>
            </value>
            <value>
                <fullName>Opportunity_Delta</fullName>
                <label>Oportunidade Delta</label>
            </value>
            <value>
                <fullName>Oportunidade_Lead</fullName>
                <label>Oportunidade Luz</label>
            </value>
            <value>
                <fullName>Oportunidade_Thymos</fullName>
                <label>Oportunidade Thymos</label>
            </value>
            <value>
                <fullName>OportunidadeThymos_Consultoria</fullName>
                <label>OportunidadeThymos Consultoria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>