force-app/main/default/objects/CadenceTemplate__c/fields/ObjectStage__c.field-meta.xml
<CustomField>
    <fullName>ObjectStage__c</fullName>
    <label>Status do Objeto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Estudo</fullName>
            </value>
            <value>
                <fullName>Inicio de Contato</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Aguardando Conta</fullName>
            </value>
            <value>
                <fullName>Em Agendamento</fullName>
            </value>
            <value>
                <fullName>Agendado</fullName>
            </value>
            <value>
                <fullName>Atualização de estudos</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Qualificado</fullName>
            </value>
            <value>
                <fullName>Contrato Gerado</fullName>
            </value>
            <value>
                <fullName>Em Negociação</fullName>
            </value>
            <value>
                <fullName>Proposta</fullName>
            </value>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Ganho</fullName>
            </value>
            <value>
                <fullName>Perdido</fullName>
            </value>
            <value>
                <fullName>Oportunidade</fullName>
            </value>
            <value>
                <fullName>Integrar</fullName>
            </value>
            <value>
                <fullName>Contato Futuro</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
                <label>Novo (Lead)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>