force-app/main/default/objects/CadenceTemplate__c/fields/OperationSource__c.field-meta.xml
<CustomField>
    <fullName>OperationSource__c</fullName>
    <description>Origem da Operação do Lead</description>
    <label>Origem da Operação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ObjectRecordType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SiteLuz</fullName>
            </value>
            <value>
                <fullName>AreaLogada</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Parceiros</fullName>
            </value>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>Chat Web</fullName>
            </value>
            <value>
                <fullName>LISTA SPEEDIO</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>WhatsApp Receptivo</fullName>
            </value>
            <value>
                <fullName>UNITY</fullName>
            </value>
            <value>
                <fullName>Campanha WhatsApp</fullName>
            </value>
            <value>
                <fullName>Prospecção Própria</fullName>
            </value>
            <value>
                <fullName>Luciano Princess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>