force-app/main/default/objects/CadenceTemplate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Fonte</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ObjectRecordType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Parceiros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>