force-app/main/default/objects/CadenceTemplate__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>ObjectRecordType__c</columns>
    <columns>ObjectStage__c</columns>
    <columns>OperationSource__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>